--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "populate-districts": "node ./scripts/populateDistricts.js"
   },
   "keywords": [],
   "author": "",
