--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 MONGO_URI = <mongodb_connection_string>
 JWT_SECRET = <secret_key>
 PORT = <port_number>
+TWILIO_ACCOUNT_SID = <twilio_account_sid>
+TWILIO_AUTH_TOKEN = <twilio_auth_token>
+TWILIO_PHONE_NUMBER = <twilio_phone_number>
