feat: integrate urgency and duplicate detection services

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ PORT = <port_number>
 TWILIO_ACCOUNT_SID = <twilio_account_sid>
 TWILIO_AUTH_TOKEN = <twilio_auth_token>
 TWILIO_PHONE_NUMBER = <twilio_phone_number>
+DUPLICATE_DETECTION_SERVICE_URL=<url>
+URGENCY_SERVICE_URL=<url>
