--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 MONGO_URI = <mongodb_connection_string>
 JWT_SECRET = <secret_key>
 PORT = <port_number>
+DB_PASSWORD = <mongodb_password>
+DB_USER = <mongodb_user>
 TWILIO_ACCOUNT_SID = <twilio_account_sid>
 TWILIO_AUTH_TOKEN = <twilio_auth_token>
 TWILIO_PHONE_NUMBER = <twilio_phone_number>
 DUPLICATE_DETECTION_SERVICE_URL=<url>
 URGENCY_SERVICE_URL=<url>
+CORS_ORIGIN = <frontend_url>
